--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 weibo_username:     dcui
 zhihu_username:     dcui
-github_username:    dcui
+github_username:    dansonc
 twitter_username:   dcui
 facebook_username:  dcui
 linkedin_username:  dcui
@@ -71,15 +71,15 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_track_id: 'UA-xxxxxx-1'            # Format: UA-xxxxxx-xx
+ga_domain: dcui.top
 
 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "For the next quantum leap<br>尘埃未定"
-sidebar-avatar: /img/avatar-dcui.png     # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-dcui.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
